add the fuse_lowlevel.h library to the CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,8 @@ include_directories(.)
 add_executable(TP3_Realisation_d_un_Systeme_de_Fichiers_simple
         tosfs.h
         tostfs.c)
+
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(FUSE REQUIRED fuse)
+include_directories(${FUSE_INCLUDE_DIRS})
+target_link_libraries(TP3_Realisation_d_un_Systeme_de_Fichiers_simple ${FUSE_LIBRARIES})
